--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 #Created by webjeda - http://webjeda.com
 
-title: Bheema #Keep it short
+title: Wasserburger-Lauf #Keep it short
 email: your@email.com
 
 
